css/styles.css
:root {
  --dark-gray: #241f1f;
  --gray: #363636;
  --white: #ffffff;
  --purple: #740ac4;
  --light-purple: #a143e8;
  --pink: #d86ceb;
}

.container {
  background-color: var(--dark-gray);
}

/* Settings for nav bar */
.nav-colors {
  background-color: black;
}
/* Made these changes to navbar & nav-item 
  for changing hover background color and making it extend 
  all the way down the whole bar */
.navbar {
  padding: 0;
}

.nav-item {
  padding: 0.5em 0;
}

.nav-link {
  color: var(--pink);
  text-decoration: none;
  font-weight: bold;
  font-size: 1.3em;
}

.nav-link:hover {
  color: var(--purple);
}

/* Class for managing the header at the top of the page */
.page-header {
  text-align: center;
}

/* Classes for most of the content */
.content-container {
  background-color: var(--gray);
  color: var(--white);
  padding: 2em;
  font-size: 1.2em;
}

.section {
  background-color: var(--dark-gray);
  border-radius: 0.4em;
  padding: 1.5em;
  margin: 0;
  color: var(--white);
}

.section-header {
  text-align: center;
  font-weight: bold;
  font-size: 1.4em;
  padding: 1.2em;
}

/* Used for the form text boxes */
.id-box {
  background-color: var(--gray);
  color: var(--pink);
  font-size: 1.2em;
  border-color: var(--light-purple);
  border-radius: 0.4em;
  width: 100%;
}

/* Classes for the form submit buttons */
.submit {
  width: 49%;
  background-color: var(--pink);
  border-color: var(--pink);
  margin: 0 2px 0 2px;
}

.submit:hover {
  background-color: var(--purple);
  border-color: var(--purple);
}

.reset {
  width: 49%;
  color: var(--pink);
  border-color: var(--pink);
  margin: 0 2px 0 2px;
}

.reset:hover {
  background-color: var(--pink);
  color: var(--white);
  border-color: var(--pink);
}

